Src/Newt/NewtonDynamics/Import/Newton.h

  #define dFloat double
  #define dFloat float
typedef struct NewtonMesh{} NewtonMesh;
typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonJoint{} NewtonJoint;
typedef struct NewtonCollision{} NewtonCollision;
typedef struct NewtonBoxParam NewtonBoxParam;
typedef struct NewtonConeParam NewtonConeParam;
typedef struct NewtonSphereParam NewtonSphereParam;
typedef struct NewtonCapsuleParam NewtonCapsuleParam;
typedef struct NewtonCylinderParam NewtonCylinderParam;
typedef struct NewtonConvexHullParam NewtonConvexHullParam;
typedef struct NewtonCollisionTreeParam NewtonCollisionTreeParam;
typedef struct NewtonSceneCollisionParam NewtonSceneCollisionParam;
typedef struct NewtonChamferCylinderParam NewtonChamferCylinderParam;
typedef struct NewtonCompoundCollisionParam NewtonCompoundCollisionParam;
typedef struct NewtonConvexHullModifierParam NewtonConvexHullModifierParam;
typedef struct NewtonHeightFieldCollisionParam NewtonHeightFieldCollisionParam;
typedef struct NewtonCollisionInfoRecord NewtonCollisionInfoRecord;
struct NewtonBoxParam
{
  dFloat m_x;
  dFloat m_y;
  dFloat m_z;
};
struct NewtonSphereParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_r2;
};
struct NewtonCylinderParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_height;
};
struct NewtonCapsuleParam
{
  dFloat m_r0;
  dFloat m_r1;
  dFloat m_height;
};
struct NewtonConeParam
{
  dFloat m_r;
  dFloat m_height;
};
struct NewtonChamferCylinderParam
{
  dFloat m_r;
  dFloat m_height;
};
struct NewtonConvexHullParam
{
  int m_vertexCount;
  int m_vertexStrideInBytes;
  int m_faceCount;
  dFloat* m_vertex;
};
struct NewtonConvexHullModifierParam
{
  NewtonCollision* m_chidren;
};
struct NewtonCompoundCollisionParam
{
  int m_chidrenCount;
  NewtonCollision** m_chidren;
};
struct NewtonCollisionTreeParam
{
  int m_vertexCount;
  int m_indexCount;
};
struct NewtonHeightFieldCollisionParam
{
  int m_width;
  int m_height;
  int m_gridsDiagonals;
  dFloat m_horizonalScale;
  dFloat m_verticalScale;
  unsigned short *m_elevation;
  char *m_atributes;
};
struct NewtonSceneCollisionParam
{
  int m_childrenProxyCount;
};
struct NewtonCollisionInfoRecord
{
  dFloat m_offsetMatrix[4][4];
  int m_collisionType;				// tag id to identify the collision primitive
  int m_referenceCount;				// the current reference count for this collision
  int m_collisionUserID;

  union {
    NewtonBoxParam m_box;
    NewtonConeParam m_cone;
    NewtonSphereParam m_sphere;
    NewtonCapsuleParam m_capsule;
    NewtonCylinderParam m_cylinder;
    NewtonChamferCylinderParam m_chamferCylinder;
    NewtonConvexHullParam m_convexHull;
    NewtonCompoundCollisionParam m_compoundCollision;
    NewtonConvexHullModifierParam m_convexHullModifier;
    NewtonCollisionTreeParam m_collisionTree;
    NewtonHeightFieldCollisionParam m_heightField;
    NewtonSceneCollisionParam m_sceneCollision;
    dFloat m_paramArray[64];		    // user define collision can use this to store information
  };
};
typedef struct NewtonJointRecord NewtonJointRecord;
typedef struct NewtonHingeSliderUpdateDesc NewtonHingeSliderUpdateDesc;
typedef struct NewtonUserMeshCollisionRayHitDesc NewtonUserMeshCollisionRayHitDesc;
typedef struct NewtonUserMeshCollisionCollideDesc NewtonUserMeshCollisionCollideDesc;
typedef struct NewtonWorldConvexCastReturnInfo NewtonWorldConvexCastReturnInfo;
struct NewtonJointRecord
{
  dFloat m_attachmenMatrix_0[4][4];
  dFloat m_attachmenMatrix_1[4][4];
  dFloat m_minLinearDof[3];
  dFloat m_maxLinearDof[3];
  dFloat m_minAngularDof[3];
  dFloat m_maxAngularDof[3];
  const NewtonBody* m_attachBody_0;
  const NewtonBody* m_attachBody_1;
  dFloat m_extraParameters[16];
  int	m_bodiesCollisionOn;
  char m_descriptionType[32];
} ;
struct NewtonUserMeshCollisionCollideDesc
{
  dFloat m_boxP0[4];						// lower bounding box of intersection query in local space
  dFloat m_boxP1[4];						// upper bounding box of intersection query in local space
  int m_threadNumber;						// current thread executing this query
  int	m_faceCount;                        // the application should set here how many polygons intersect the query box
  int m_vertexStrideInBytes;              // the application should set here the size of each vertex
  void* m_userData;                       // user data passed to the collision geometry at creation time
  dFloat* m_vertex;                       // the application should the pointer to the vertex array.
   int* m_userAttribute;                   // the application should set here the pointer to the user data, one for each face
  int* m_faceIndexCount;                  // the application should set here the pointer to the vertex count of each face.
  int* m_faceVertexIndex;                 // the application should set here the pointer index array for each vertex on a face.
  NewtonBody* m_objBody;                  // pointer to the colliding body
  NewtonBody* m_polySoupBody;             // pointer to the rigid body owner of this collision tree
};
struct NewtonWorldConvexCastReturnInfo
{
  dFloat m_point[4];						// collision point in global space
  dFloat m_normal[4];						// surface normal at collision point in global space
  dFloat m_normalOnHitPoint[4];           // surface normal at the surface of the hit body,
  // is the same as the normal calculated by a ray cast hitting the body at the hit point
  dFloat m_penetration;                   // contact penetration at collision point
  int    m_contactID;	                    // collision ID at contact point
  const  NewtonBody* m_hitBody;			// body hit at contact point
};
struct NewtonUserMeshCollisionRayHitDesc
{
  dFloat m_p0[4];							// ray origin in collision local space
  dFloat m_p1[4];                         // ray destination in collision local space
  dFloat m_normalOut[4];					// copy here the normal at the ray intersection
  int m_userIdOut;                        // copy here a user defined id for further feedback
  void* m_userData;                       // user data passed to the collision geometry at creation time
};
struct NewtonHingeSliderUpdateDesc
{
  dFloat m_accel;
  dFloat m_minFriction;
  dFloat m_maxFriction;
  dFloat m_timestep;
} ;
// Newton callback functions
typedef void* (*NewtonAllocMemory) (int sizeInBytes);
typedef void (*NewtonFreeMemory) (void* const ptr, int sizeInBytes);
typedef void (*NewtonDestroyWorld) (const NewtonWorld* const newtonWorld);
typedef unsigned (*NewtonGetTicksCountCallback) ();
typedef void (*NewtonSerialize) (void* const serializeHandle, const void* buffer, int size);
typedef void (*NewtonDeserialize) (void* const serializeHandle, void* buffer, int size);
// user collision callbacks
typedef void (*NewtonUserMeshCollisionDestroyCallback) (void* const userData);
typedef void (*NewtonUserMeshCollisionCollideCallback) (NewtonUserMeshCollisionCollideDesc* const collideDescData);
typedef dFloat (*NewtonUserMeshCollisionRayHitCallback) (NewtonUserMeshCollisionRayHitDesc* const lineDescData);
typedef void (*NewtonUserMeshCollisionGetCollisionInfo) (void* const userData, NewtonCollisionInfoRecord* const infoRecord);
typedef int (*NewtonUserMeshCollisionGetFacesInAABB) (void* const userData, const dFloat* const p0, const dFloat* const p1,
                            const dFloat** const vertexArray, int* const vertexCount, int* const vertexStrideInBytes,
                            const int* const indexList, int maxIndexCount, const int* const userDataList);
typedef dFloat (*NewtonCollisionTreeRayCastCallback) (const NewtonBody* const body, const NewtonCollision* const treeCollision, dFloat interception, dFloat* normal, int faceId, void* usedData);
typedef dFloat (*NewtonHeightFieldRayCastCallback) (const NewtonBody* const body, const NewtonCollision* const heightFieldCollision, dFloat interception, int row, int col, dFloat* normal, int faceId, void* usedData);
// collision tree call back (obsoleted no recommended)
typedef void (*NewtonTreeCollisionCallback) (const NewtonBody* const bodyWithTreeCollision, const NewtonBody* const body, int faceID,
                       int vertexCount, const dFloat* const vertex, int vertexStrideInBytes);
typedef void (*NewtonBodyDestructor) (const NewtonBody* const body);
typedef void (*NewtonApplyForceAndTorque) (const NewtonBody* const body, dFloat timestep, int threadIndex);
typedef void (*NewtonSetTransform) (const NewtonBody* const body, const dFloat* const matrix, int threadIndex);
typedef int (*NewtonIslandUpdate) (const NewtonWorld* const newtonWorld, const void* islandHandle, int bodyCount);
typedef void (*NewtonBodyLeaveWorld) (const NewtonBody* const body, int threadIndex);
typedef void (*NewtonDestroyBodyByExeciveForce) (const NewtonBody* const body, const NewtonJoint* const contact);
typedef void (*NewtonCollisionDestructor) (const NewtonWorld* const newtonWorld, const NewtonCollision* const collision);
typedef int (*NewtonCollisionCompoundBreakableCallback) (NewtonMesh* const mesh, void* const userData, dFloat* const planeMatrixOut);