Src/Newt/NewtonDynamics/Import/DllImports.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Runtime.InteropServices;
using System.Text;

namespace Game.Newt.NewtonDynamics.Import
{
	//	If you want to know more, go here, and paste into the search box on the left side:
	//	http://newtondynamics.com/wiki/index.php5?title=API_Database
	//
	//	Also I sometimes found additional comments in the newton.cpp file
	internal static class Newton
	{
		#region Structures

		#region Struct: NewtonCollisionInfoRecord

		//TODO:  Figure out how to import this in c# - it may have already changed in a future version:
		//http://www.newtondynamics.com/forum/viewtopic.php?f=12&t=6654

		//[StructLayout(LayoutKind.Sequential)]
		//internal struct NewtonCollisionInfoRecord
		//{
		//    public float[,] m_offsetMatrix;		//[4][4]
		//    public int m_collisionType;				// tag id to identify the collision primitive
		//    public int m_referenceCount;				// the current reference count for this collision		
		//    public int m_collisionUserID;				

		//    struct NewtonBoxParam
		//    {
		//        public float m_x;
		//        public float m_y;
		//        public float m_z;
		//    }

		//    struct NewtonSphereParam
		//    {
		//        public float m_r0;
		//        public float m_r1;
		//        public float m_r2;
		//    }

		//    struct NewtonCylinderParam
		//    {
		//        public float m_r0;
		//        public float m_r1;
		//        public float m_height;
		//    }

		//    struct NewtonCapsuleParam
		//    {
		//        public float m_r0;
		//        public float m_r1;
		//        public float m_height;
		//    }

		//    struct NewtonConeParam
		//    {
		//        public float m_r;
		//        public float m_height;
		//    }

		//    struct NewtonChamferCylinderParam
		//    {
		//        public float m_r;
		//        public float m_height;
		//    }

		//    struct NewtonConvexHullParam
		//    {
		//        public int m_vertexCount;
		//        public int m_vertexStrideInBytes;
		//        public int m_faceCount;
		//        public dFloat* m_vertex;
		//    }

		//    struct NewtonConvexHullModifierParam
		//    {
		//        public NewtonCollision* m_chidren;
		//    }

		//    struct NewtonCompoundCollisionParam
		//    {
		//        public int m_chidrenCount;
		//        public NewtonCollision** m_chidren;
		//    }

		//    struct NewtonCollisionTreeParam
		//    {
		//        public int m_vertexCount;
		//        public int m_indexCount;
		//    }

		//    struct NewtonHeightFieldCollisionParam
		//    {
		//        public int m_width;
		//        public int m_height;
		//        public int m_gridsDiagonals;
		//        public float m_horizonalScale;
		//        public float m_verticalScale;
		//        public unsigned short *m_elevation;
		//        public char *m_atributes;
		//    }

		//    struct NewtonSceneCollisionParam
		//    {
		//        public int m_childrenProxyCount;
		//    }

		//    union 
		//    {
		//        NewtonBoxParam m_box;									
		//        NewtonConeParam m_cone;
		//        NewtonSphereParam m_sphere;
		//        NewtonCapsuleParam m_capsule;
		//        NewtonCylinderParam m_cylinder;
		//        NewtonChamferCylinderParam m_chamferCylinder;
		//        NewtonConvexHullParam m_convexHull;
		//        NewtonCompoundCollisionParam m_compoundCollision;
		//        NewtonConvexHullModifierParam m_convexHullModifier;
		//        NewtonCollisionTreeParam m_collisionTree;
		//        NewtonHeightFieldCollisionParam m_heightField;
		//        NewtonSceneCollisionParam m_sceneCollision;
		//        float[] m_paramArray;		    // user define collision can use this to store information		//[64]
		//    }
		//}

		#endregion
		#region Struct: NewtonJointRecord

		[StructLayout(LayoutKind.Sequential)]
		internal struct NewtonJointRecord
		{
			public float[,] m_attachmenMatrix_0;		//	[4][4]
			public float[,] m_attachmenMatrix_1;		//[4][4]
			public float[] m_minLinearDof;		//	[3]
			public float[] m_maxLinearDof;		//	[3]
			public float[] m_minAngularDof;		//	[3]
			public float[] m_maxAngularDof;		//	[3]
			public IntPtr m_attachBody_0;		//	const NewtonBody*
			public IntPtr m_attachBody_1;		//	const NewtonBody*
			public float[] m_extraParameters;		//	[16]
			public int m_bodiesCollisionOn;
			public char[] m_descriptionType;		//	[32]
		}

		#endregion

		#region Struct: NewtonUserMeshCollisionCollideDesc

		[StructLayout(LayoutKind.Sequential)]
		internal struct NewtonUserMeshCollisionCollideDesc
		{
			public float[] m_boxP0;						// lower bounding box of intersection query in local space		//	[4]
			public float[] m_boxP1;						// upper bounding box of intersection query in local space		//	[4]
			public int m_threadNumber;						// current thread executing this query
			public int m_faceCount;                        // the application should set here how many polygons intersect the query box
			public int m_vertexStrideInBytes;              // the application should set here the size of each vertex
			public IntPtr m_userData;                       // user data passed to the collision geometry at creation time
			public float[] m_vertex;                       // the application should the pointer to the vertex array. 
			public int m_userAttribute;                   // the application should set here the pointer to the user data, one for each face
			public int m_faceIndexCount;                  // the application should set here the pointer to the vertex count of each face.
			public int m_faceVertexIndex;                 // the application should set here the pointer index array for each vertex on a face.
			public IntPtr m_objBody;                  // pointer to the colliding body		//	NewtonBody*
			public IntPtr m_polySoupBody;             // pointer to the rigid body owner of this collision tree		//	NewtonBody*
		}

		#endregion
		#region Struct: NewtonWorldConvexCastReturnInfo

		[StructLayout(LayoutKind.Sequential)]
		internal struct NewtonWorldConvexCastReturnInfo
		{
			public float[] m_point;						// collision point in global space		//	[4]
			public float[] m_normal;						// surface normal at collision point in global space		//	[4]
			public float[] m_normalOnHitPoint;           // surface normal at the surface of the hit body, is the same as the normal calculated by a ray cast hitting the body at the hit point		//	[4]
			public float m_penetration;                   // contact penetration at collision point
			public int m_contactID;	                    // collision ID at contact point
			public IntPtr m_hitBody;			// body hit at contact point		//	const NewtonBody*
		}

		#endregion
		#region Struct: NewtonUserMeshCollisionRayHitDesc

		[StructLayout(LayoutKind.Sequential)]
		internal struct NewtonUserMeshCollisionRayHitDesc
		{
			public float[] m_p0;							// ray origin in collision local space		//	[4]
			public float[] m_p1;                         // ray destination in collision local space			//	[4]
			public float[] m_normalOut;					// copy here the normal at the ray intersection		//	[4]
			public int m_userIdOut;                        // copy here a user defined id for further feedback  
			public IntPtr m_userData;                       // user data passed to the collision geometry at creation time		//	void*
		}

		#endregion
		#region Struct: NewtonHingeSliderUpdateDesc

		[StructLayout(LayoutKind.Sequential)]
		internal struct NewtonHingeSliderUpdateDesc
		{
			public float m_accel;
			public float m_minFriction;
			public float m_maxFriction;
			public float m_timestep;
		}

		#endregion

		#endregion

		#region Callbacks (delegates)

		#region Newton callback functions

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate IntPtr NewtonAllocMemory(int sizeInBytes);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonFreeMemory(IntPtr ptr, int sizeInBytes);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonDestroyWorld(IntPtr newtonWorld);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonGetTicksCountCallback();


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonSerialize(IntPtr serializeHandle, IntPtr buffer, int size);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonDeserialize(IntPtr serializeHandle, IntPtr buffer, int size);

		#endregion
		#region User Collision Callbacks

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonUserMeshCollisionDestroyCallback(IntPtr userData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonUserMeshCollisionCollideCallback([MarshalAs(UnmanagedType.LPStruct)]NewtonUserMeshCollisionCollideDesc collideDescData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate float NewtonUserMeshCollisionRayHitCallback([MarshalAs(UnmanagedType.LPStruct)]NewtonUserMeshCollisionRayHitDesc lineDescData);

		//TODO:  Fix the NewtonCollisionInfoRecord struct, then this callback can be used
		//internal delegate void NewtonUserMeshCollisionGetCollisionInfo(IntPtr userData, [MarshalAs(UnmanagedType.LPStruct)]NewtonCollisionInfoRecord infoRecord);
		//TODO:  Figure out how to map the pointer to pointer (const dFloat** const vertexArray)
		//internal delegate int NewtonUserMeshCollisionGetFacesInAABB(IntPtr userData, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1, const dFloat** const vertexArray, int* const vertexCount, int* const vertexStrideInBytes, const int* const indexList, int maxIndexCount, const int* const userDataList);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate float NewtonCollisionTreeRayCastCallback(IntPtr body, IntPtr treeCollision, float interception, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int faceId, IntPtr usedData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate float NewtonHeightFieldRayCastCallback(IntPtr body, IntPtr heightFieldCollision, float interception, int row, int col, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int faceId, IntPtr usedData);


		// collision tree call back (obsoleted no recommended)
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonTreeCollisionCallback(IntPtr bodyWithTreeCollision, IntPtr body, int faceID, int vertexCount, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, int vertexStrideInBytes);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonBodyDestructor(IntPtr body);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonApplyForceAndTorque(IntPtr body, float timestep, int threadIndex);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonSetTransform(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, int threadIndex);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate int NewtonIslandUpdate(IntPtr newtonWorld, IntPtr islandHandle, int bodyCount);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonBodyLeaveWorld(IntPtr body, int threadIndex);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonDestroyBodyByExeciveForce(IntPtr body, IntPtr contact);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonCollisionDestructor(IntPtr newtonWorld, IntPtr collision);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate int NewtonCollisionCompoundBreakableCallback(IntPtr mesh, IntPtr userData, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] planeMatrixOut);

